# RAG-PDF-docling

./: .gitignore  README.md  example_usage.py  pyproject.toml  pyrightconfig.json  requirements.txt
data/processed_markdown/: README.md
data/source_pdfs/: README.md
data/vector_store/: README.md
docs/: ARCHITECTURE.md
src/: __init__.py  document_processor.py  embedding_generator.py  rag_pipeline.py  retriever.py  text_chunker.py  vector_store.py
