[project]
name = "rag-pdf-docling"
version = "0.1.0"
description = "RAG pipeline using Docling for PDF extraction and BGE-M3 for embeddings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "docling>=2.15.0",
    "docling-core>=2.21.0",
    "FlagEmbedding>=1.2.0",
    "chromadb>=0.4.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
